yet another attempt to fix width so it fits and not overflow

--- a/style.css
+++ b/style.css
@@ -125,7 +125,8 @@ body {
 @media (width <= 650px) {
 
 	.game-container{
-	width: 100vw;
+		display: flex;
+		flex-direction: column;	
 	}
-	
+
 }
